--- a/3DFH/3DFH.cabal
+++ b/3DFH/3DFH.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: f7aec9dce0101cf4ec3f13432618ab729ddedb293b83e66be54543fde7518686
+-- hash: 21b30f63524ce12d5d1e6940710e52033c762d20f969d3c1b2a4fc7d70afce1c
 
 name:           3DFH
 version:        0.1.0.0
@@ -23,9 +23,12 @@ source-repository head
 library
   exposed-modules:
       Colour
+      Cube
+      Geo
       Lib
       PixArray
       Utils
+      Vec
   other-modules:
       Paths_3DFH
   hs-source-dirs:
@@ -34,7 +37,7 @@ library
   build-depends:
       base >=4.7 && <5
     , criterion
-    , matrix
+    , hmatrix
     , vector
   default-language: Haskell2010
 
@@ -50,6 +53,6 @@ test-suite 3DFH-test
       3DFH
     , base >=4.7 && <5
     , criterion
-    , matrix
+    , hmatrix
     , vector
   default-language: Haskell2010
